--- a/template-python-flask/flaskr/templates/next.html
+++ b/template-python-flask/flaskr/templates/next.html
@@ -1,1 +1,16 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet"href="/static/bootstrap.css"
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1 class="display-1">HELLO!!</h1>
+    <button type="button" class="btn btn-primary">Primary</button>
+
+</body>
+</html>
+
